# Personal_Projects_Private

./: README.md  Арина.txt
Веб программирование/lab1_Bardyshev_A_A/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  requirements.txt
Информационная безопасность баз данных/ЛР1/: Инфологическое моделирование баз данных по методу «сущность-связь».docx  ЛР 1. Инфологическое проектирование базы данных — копия.docx
Информационная безопасность баз данных/ЛР2/: ЛР 2. Реализация БД в рамках СУБД.docx  (+1 more)
Комьютерные сети/: Кодирование данных в телекоммуникационных сетях.docx
Личные проекты/secaudit-platform/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Личные проекты/secaudit-platform/.github/workflows/: ci.yml
Личные проекты/secaudit-platform/examples/sample_repo/: .env  app.py  requirements.txt
Личные проекты/secaudit-platform/src/secaudit/: cli.py  models.py  report.py  utils.py
Личные проекты/secaudit-platform/src/secaudit/api/: main.py
Личные проекты/secaudit-platform/src/secaudit/scanners/: configs.py  deps.py  secrets.py
Личные проекты/secaudit-platform/src/secaudit/templates/: index.html  layout.html  result.html
Личные проекты/secaudit-platform/tests/: test_basic.py
Основы системного программирования/: лр12.txt
Теория информаиционной безопасности и методология защиты информации/: ЛАБА 1.docx  ЛАБА 2.docx  ЛАБА 3.docx  ЛАБА 4.docx  ЛАБА 5.docx  ЛАБА 6.docx
Технологии и методы программирования/: 1.docx  2.docx  Лабораторная работа № 1-2.docx  Лабораторная работа №3.docx  Лабораторная работа №4.docx
(+98 files in other folders)
